--- a/assignment1Q5.htm
+++ b/assignment1Q5.htm
@@ -1,5 +1,6 @@
+<!doctype = html>
 <html>
-<body><style="background:#FB2576">
-<h1><style="colour:#150050">Lorem ipsum</h1>
+<body bgcolor=FB2576 text =150050>
+<h1>Lorem ipsum</h1>
 </body>
 </html>
