--- a/assingment1 Q4.html
+++ b/assingment1 Q4.html
@@ -1,13 +1,15 @@
 <DOCTYPE HTML>
-  <html>
-    <title><h2> Union Territories in India </h2></title>
-<body><h3>Ladakh
-Jammu and Kashmir
-Puducherry
-Lakshadweep
-Delhi
-Chandigarh
-Daman and Diu
-Andaman and Nicobar Islands<h4>
-  </body>
-  </html>
+<html>
+<body>
+<h1>Union territories</h1>
+<ol>
+<li>Ladakh</li>
+<li>Jammu and Kashmir</li>
+<li>Puducherry</li>
+<li>Lakshadweep</li>
+<li>Delhi</li>
+<li>Chandigarh</li>
+<li>Daman and Diu</li>
+<li>Andaman and Nicobar Islands</li>
+</body>
+</html>
