--- a/assingment1 Q4.html
+++ b/assingment1 Q4.html
@@ -1,11 +1,11 @@
 <h1>Union territories</h1>
-<ol>
+<ul>
 <li>Ladakh</li>
-<li>Jammu and Kashmir</li>
+<li>Jammu & Kashmir</li>
 <li>Puducherry</li>
 <li>Lakshadweep</li>
 <li>Delhi</li>
 <li>Chandigarh</li>
 <li>Daman and Diu</li>
 <li>Andaman and Nicobar Islands</li>
-</ol>
+</ul>
