--- a/assignment1Q5.htm
+++ b/assignment1Q5.htm
@@ -1,6 +1,5 @@
-<!doctype = html>
+<doctype = html>
 <html>
-<body bgcolor=FB2576 text =150050>
-<h1>Lorem ipsum</h1>
-</body>
-</html>
+  <body bgcolour=FB2576 text=150050>
+    <h1>Lorem ipsum</h1>
+    </html>
