--- a/assingment1 Q4.html
+++ b/assingment1 Q4.html
@@ -1,6 +1,9 @@
+<DOCTYPE = html>
+<html>
+<body>
 <h1>Union territories</h1>
 <ul>
-   <li>Ladakh</li>
+<li>Ladakh</li>
 <li>Jammu & Kashmir</li>
 <li>Puducherry</li>
 <li>Lakshadweep</li>
@@ -9,3 +12,6 @@
 <li>Daman and Diu</li>
 <li>Andaman and Nicobar Islands</li>
 </ul>
+</body>
+</html>
+   
