--- a/assignment1Q5.html
+++ b/assignment1Q5.html
@@ -1,6 +1,6 @@
 <doctype = html>
 <html>
-  <body bgcolour="FB2576" text="150050">
+  <body bgcolor="FB2576" text="150050">
     <h1>Lorem ipsum</h1>
   </body>
     </html>
